// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> Default story renders snapshot 1`] = `
<div
  class="text-utility-default-primary"
>
  <a
    class="link link--emphasis-default link--size-lg"
    href="http://example.org/"
  >
    Link
  </a>
</div>
`;

exports[`<Link /> Emphasis story renders snapshot 1`] = `
<div
  class="text-utility-default-primary"
>
  <div>
    <a
      class="link link--context-standalone link--emphasis-default link--size-md"
      href="http://example.org/"
    >
      Default Emphasis
    </a>
    <br />
    <a
      class="link link--context-standalone link--emphasis-high link--size-md"
      href="http://example.org/"
    >
      High Emphasis
    </a>
    <br />
    <a
      class="link link--context-standalone link--emphasis-low link--size-md"
      href="http://example.org/"
    >
      Low Emphasis
    </a>
  </div>
</div>
`;

exports[`<Link /> InheritColor story renders snapshot 1`] = `
<div
  class="text-utility-default-primary"
>
  <div
    class="text-utility-critical"
  >
    <div>
      Lorem ipsum dolor sit amet,
       
      <a
        class="link link--emphasis-default link--size-lg"
        href="https://example.com/"
      >
        consectetur adipiscing elit
      </a>
      . Morbi porta at ante quis molestie. Nam scelerisque id diam at iaculis. Nullam sit amet iaculis erat. Nulla id tellus ante.
       
      <a
        class="link link--emphasis-default link--size-lg"
        href="https://example.org"
      >
        Aliquam pellentesque ipsum sagittis, commodo neque at, ornare est. Maecenas a malesuada sem, vitae euismod erat. Nullam molestie nunc non dui dignissim fermentum.
      </a>
       
      Aliquam id volutpat nulla, sed auctor orci. Fusce cursus leo nisi. Fusce vehicula vitae nisl nec ultricies. Cras ut enim nec magna semper egestas. Sed sed quam id nisl bibendum convallis. Proin suscipit, odio
       
      <a
        class="link link--emphasis-default link--size-lg"
        href="https://example.edu"
      >
        vel pulvinar
      </a>
       
      euismod, risus eros ullamcorper lectus, non blandit nulla dui eget massa.
    </div>
  </div>
</div>
`;

exports[`<Link /> InverseVariant story renders snapshot 1`] = `
<div
  class="text-utility-default-primary"
>
  <div
    class="w-[384px] p-spacing-size-half text-center text-utility-inverse"
  >
    <a
      class="link link--emphasis-default link--size-lg link--variant-inverse"
      href="http://example.org/"
    >
      Link
    </a>
  </div>
</div>
`;

exports[`<Link /> LinkInParagraphContext story renders snapshot 1`] = `
<div
  class="text-utility-default-primary"
>
  <div>
    Lorem ipsum dolor sit amet,
     
    <a
      class="link link--emphasis-default link--size-lg"
      href="https://example.com/"
    >
      consectetur adipiscing elit
    </a>
    . Morbi porta at ante quis molestie. Nam scelerisque id diam at iaculis. Nullam sit amet iaculis erat. Nulla id tellus ante.
     
    <a
      class="link link--emphasis-default link--size-lg"
      href="https://example.org"
    >
      Aliquam pellentesque ipsum sagittis, commodo neque at, ornare est. Maecenas a malesuada sem, vitae euismod erat. Nullam molestie nunc non dui dignissim fermentum.
    </a>
     
    Aliquam id volutpat nulla, sed auctor orci. Fusce cursus leo nisi. Fusce vehicula vitae nisl nec ultricies. Cras ut enim nec magna semper egestas. Sed sed quam id nisl bibendum convallis. Proin suscipit, odio
     
    <a
      class="link link--emphasis-default link--size-lg"
      href="https://example.edu"
    >
      vel pulvinar
    </a>
     
    euismod, risus eros ullamcorper lectus, non blandit nulla dui eget massa.
  </div>
</div>
`;

exports[`<Link /> LinkWithChevron story renders snapshot 1`] = `
<div
  class="text-utility-default-primary"
>
  <a
    class="link link--context-standalone link--emphasis-low link--has-right-icon link--size-lg"
    href="http://example.org/"
  >
    Default
    <svg
      aria-hidden="true"
      class="icon link__icon"
      fill="currentColor"
      height="24px"
      style="--icon-size: 24px;"
      viewBox="0 0 24 24"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12.9462 12.0004L8.34619 7.40043L9.39994 6.34668L15.0537 12.0004L9.39994 17.6542L8.34619 16.6004L12.9462 12.0004Z"
      />
    </svg>
  </a>
</div>
`;

exports[`<Link /> LinkWithFormattedChildren story renders snapshot 1`] = `
<div
  class="text-utility-default-primary"
>
  <a
    class="link link--context-standalone link--emphasis-default link--has-right-icon link--size-lg"
    href="http://example.org/"
  >
    <em>
      emphasized link
    </em>
    <svg
      aria-hidden="true"
      class="icon link__icon"
      fill="currentColor"
      height="24px"
      style="--icon-size: 24px;"
      viewBox="0 0 24 24"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7.04425 18.3943L6 17.35L15.8405 7.5H7.89425V6H18.3943V16.5H16.8943V8.55375L7.04425 18.3943Z"
      />
    </svg>
  </a>
</div>
`;

exports[`<Link /> LinkWithOpenIcon story renders snapshot 1`] = `
<div
  class="text-utility-default-primary"
>
  <a
    class="link link--context-standalone link--emphasis-default link--has-right-icon link--size-lg"
    href="http://example.org/"
  >
    Default
    <svg
      aria-hidden="true"
      class="icon link__icon"
      fill="currentColor"
      height="24px"
      style="--icon-size: 24px;"
      viewBox="0 0 24 24"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7.04425 18.3943L6 17.35L15.8405 7.5H7.89425V6H18.3943V16.5H16.8943V8.55375L7.04425 18.3943Z"
      />
    </svg>
  </a>
</div>
`;

exports[`<Link /> StandaloneInverseVariant story renders snapshot 1`] = `
<div
  class="text-utility-default-primary"
>
  <a
    class="link link--context-standalone link--emphasis-default link--size-lg link--variant-inverse"
    href="http://example.org/"
  >
    Link
  </a>
</div>
`;

exports[`<Link /> UsingExtendedLink story renders snapshot 1`] = `
<div
  class="text-utility-default-primary"
>
  <div>
    Lorem ipsum dolor sit amet,
     
    <a
      class="link link--emphasis-default link--size-lg"
      href="https://example.org/extended-link/"
      to="test"
    >
      consectetur adipiscing elit
    </a>
    . Morbi porta at ante quis molestie. Nam scelerisque id diam at iaculis. Nullam sit amet iaculis erat. Nulla id tellus ante.
     
  </div>
</div>
`;

exports[`<Link /> passes class names down properly 1`] = `
<a
  class="exampleClassName link link--emphasis-default"
  data-testid="example-class-name"
  href="/"
>
  Click
</a>
`;

exports[`<Link /> passes test ids down properly 1`] = `
<a
  class="link link--emphasis-default"
  data-testid="example-test-id"
  href="/"
>
  Click
</a>
`;
